--- a/site/css/index.css
+++ b/site/css/index.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 html, body {
-    /* background-color: black; */
     margin: 0;
     padding: 0;
     font-family: 'Rubik', sans-serif;
     scroll-padding-top: 80px;
+    background-color: #F0F6F5;
+
 }
 
 .main-content {
@@ -132,14 +133,14 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url("../imagens/fruto.jpg");
+    background-image: url("../imagens/foto2.jpg");
     background-size: cover;
     z-index: 0;
 
     .fundo {
         width: 100%;
         height: calc(100vh - 80px);
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.1);
         position: absolute;
     }
 
@@ -149,23 +150,26 @@ header {
         width: 100%;
         height: 100px;
         z-index: 2;
-
+        align-items: center;
+        justify-content: center;
+        
         .um {
-            width: 100%;
-
+            width: 70%;
+            
             p {
                 color: #F0F6F5;
                 font-size: 3em;
                 text-align: center;
                 margin: 0;
                 padding: 0;
-                text-shadow: 2px 2px 5px rgba(0, 0, 0, 1s);
+                text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+                /* font-weight: bold; */
             }
 
         }
 
         .dois {
-            width: 100%;
+            width: 70%;
 
             p {
                 color: #F0F6F5;
@@ -178,114 +182,90 @@ header {
 
                 span {
                     color: #0A8CBF;
-                    text-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
                 }
             }
         }
     }
 }
 
-.oQueE {
+.simulador {
+    /* background-color: #F0F6F5; */
+    border-top: 3px solid #0A8CBF;
     width: 100%;
     height: calc(100vh - 80px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-    .solo {
+    .container {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        background: linear-gradient(90deg, #0A8CBF, #5CCFE6);
+        color: #F0F6F5;
         width: 100%;
-        height: 50%;
-        border-top: 3px solid #0A8CBF;
-        background-color: #F0F6F5;
-
+        height: 80%;
+        margin: 20px 0;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 
         .texto {
             display: flex;
             flex-direction: column;
-            margin-left: 100px;
-            width: 600px;
-            height: 210px;
+            width: 50%;
+            height: 90%;
+            padding: 3% 3% 0 3%;
 
 
-            h1 {
-                color: #0A8CBF;
+            h2 {
+                font-size: 60px;
+                width: 100%;
                 margin: 0;
-                padding: 0;
-                font-size: 25px;
-                margin-bottom: 10px;
+                margin-bottom: 30px;
+
             }
 
-            p {
-                margin: 0;
-                color: black;
+            .botao {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: #28a745;
+                color: #fff;
+                width: 200px;
+                height: 60px;
                 font-size: 20px;
+                font-weight: bold;
+                border-radius: 50px;
+                text-decoration: none;
+                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+                transition: all 0.3s ease;
+
+                &:hover {
+                    background-color: #218838;
+                    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
+                    transform: scale(1.05);
+                }
             }
         }
 
         .imagem {
-            width: 600px;
-            height: 250px;
-            border-radius: 40px 0 0 40px;
-            background-image: url("../imagens/terra(1).jpg");
+            background-image: url("../imgs\ -\ Home/imgBanner.png");
             background-size: cover;
-            box-shadow: 9px 10px 14px -5px rgba(0,0,0,0.75);
-            -webkit-box-shadow: 9px 10px 14px -5px rgba(0,0,0,0.75);
-            -moz-box-shadow: 9px 10px 14px -5px rgba(0,0,0,0.75);
-
-        }
-    }
-
-    .cafe {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: row-reverse;
-        width: 100%;
-        /* padding-top: 80px; */
-        height: 50%;
-        /* border-top: 3px solid #0A8CBF; */
-        background-color: #F0F6F5;
-
-        .texto {
-            display: flex;
-            margin-right: 100px;
-            width: 600px;
-            height: 140px;
-
-            p {
-                color: black;
-                font-size: 20px;
-            }
-        }
-
-        .imagem {
-            width: 600px;
-            height: 250px;
-            border-radius: 0 40px 40px 0;
-            background-image: url("../imagens/geãos\ de\ café.jpg");
-            background-size: cover;
-            box-shadow: 9px 10px 14px -5px rgba(0,0,0,0.75);
-            -webkit-box-shadow: 9px 10px 14px -5px rgba(0,0,0,0.75);
-            -moz-box-shadow: 9px 10px 14px -5px rgba(0,0,0,0.75);
-
+            width: 50%;
+            height: 100%;
         }
     }
 }
 
+
 .tecnologia {
     height: calc(100vh - 80px);
     width: 100%;
-    /* color: white; */
-    border-top: 3px solid #0A8CBF;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
     align-items: center;
-    background-color: #F0F6F5;
+    /* background-color: #F0F6F5; */
 
 
     .titulo {
-        background-color: #0A8CBF;
+        background: linear-gradient(90deg, #0A8CBF, #5CCFE6);
         width: 100%;
         height: 30%;
         display: flex;
@@ -317,7 +297,6 @@ header {
 
 
         .um, .dois, .tres {
-            /* background-color: aquamarine; */
             width: 30%;
             height: 80%;
             display: flex;
@@ -327,7 +306,6 @@ header {
 
             &:hover {
                 transform: scale(1.03);
-                /* color: #0A8CBF; */
             }
 
             li {
@@ -335,13 +313,8 @@ header {
                 font-size: 20px;
                 text-align: center;
                 padding: 20px;
+                color: #0A8CBF;
             }
-
-            /* img {
-                width: 300px;
-                height: auto;
-                
-            } */
 
             .sensor {
                 margin-top: 30px;
@@ -367,13 +340,13 @@ header {
 }
 
 .dashboard {
-    background-color: #F0F6F5;
+    /* background-color: #F0F6F5; */
     width: 100%;
     height: calc(100vh - 80px);
-    /* border-top: 3px solid #0A8CBF; */
     display: flex;
     justify-content: center;
     align-items: center;
+
 
     .container {
         background-color: #0A8CBF;
@@ -384,14 +357,16 @@ header {
         align-items: center;
         justify-content: space-between;
         color: #F0F6F5;
+        box-shadow: 9px 10px 14px -5px rgba(0, 0, 0, 0.75);
+        -webkit-box-shadow: 9px 10px 14px -5px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 9px 10px 14px -5px rgba(0, 0, 0, 0.75);
 
 
         .texto {
             width: 40%;
             height: 400px;
-            /* background-color: aqua; */
             list-style: none;
-            margin-left: 60px;
+            margin-left: 5%;
 
             .titulo {
                 h1 {
@@ -401,19 +376,14 @@ header {
 
                 }
 
-                /* p {
-                    font-weight: bold;
-                } */
             }
 
-            .um {
+            .um, .dois, .tres {
                 display: flex;
                 align-items: center;
                 width: 100%;
                 height: 90px;
                 font-weight: bold;
-
-                /* background-color: blueviolet; */
 
                 img {
                     width: 60px;
@@ -421,53 +391,305 @@ header {
                     margin-right: 30px;
                 }
             }
-
-            .dois {
-                display: flex;
-                align-items: center;
-                width: 100%;
-                height: 90px;
-                font-weight: bold;
-
-                /* background-color: yellowgreen; */
-
-                img {
-                    width: 60px;
-                    height: auto;
-                    margin-right: 30px;
-
-                }
-            }
-
-            .tres {
-                display: flex;
-                align-items: center;
-                width: 100%;
-                height: 90px;
-                font-weight: bold;
-
-                /* background-color: firebrick; */
-
-                img {
-                    width: 60px;
-                    height: auto;
-                    margin-right: 30px;
-
-                }
-            }
-        }
-
-        .imagem {
-            width: 50%;
-            height: 100%;
-            background-size: cover;
-            /* background-color: red; */
-            border-radius: 0 50px 50px 0;
-            background-image: url("../imagens/grafico.JPG");
-            background-size: cover;
-
         }
     }
 
+    .imagem {
+        width: 50%;
+        height: 100%;
+        background-size: cover;
+        border-radius: 0 50px 50px 0;
+        background-image: url("../imagens/grafico.JPG");
+        background-size: cover;
+    }
+}
 
+
+.equipe {
+    height: calc(100vh - 80px);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    /* background-color: #F0F6F5; */
+
+    .texto {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+
+        h1 {
+            margin: 0px;
+            margin-left: 20%;
+            font-size: 60px;
+            color: black;
+
+            a {
+                color: #0A8CBF;
+                text-decoration: none;
+                pointer-events: none;
+
+            }
+        }
+    }
+
+    .perfil {
+        width: 50%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .icones {
+            width: 540px;
+            height: 400px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            justify-content: center;
+        }
+
+
+        a {
+            text-decoration: none;
+
+            .um, .dois, .tres, .quatro, .cinco, .seis {
+                width: 180px;
+                height: 200px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+
+                .circulo {
+                    width: 150px;
+                    height: 150px;
+                    border-radius: 50%;
+                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+                    background-size: cover;
+
+                }
+
+
+
+                p {
+                    color: #ee169b;
+                    font-weight: bold;
+
+                }
+            }
+        }
+
+        .um {
+            .circulo {
+                background-image: url("../imgs\ -\ Home/aaron.png");
+            }
+
+        }
+
+        .dois {
+            .circulo {
+                background-image: url("../imgs\ -\ Home/gui.png");
+            }
+        }
+
+        .tres {
+            .circulo {
+                background-image: url("../imgs\ -\ Home/ju.png");
+            }
+        }
+
+        .quatro {
+            .circulo {
+                background-image: url("../imgs\ -\ Home/amoroso.png");
+            }
+        }
+
+        .cinco {
+            .circulo {
+                background-image: url("../imgs\ -\ Home/vlad.png");
+            }
+        }
+
+        .seis {
+            .circulo {
+                background-image: url("../imgs\ -\ Home/zaq.png");
+            }
+        }
+
+    }
+}
+
+.footer {
+    width: 100%;
+    height: calc(100vh - 80px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #0A8CBF;
+    list-style: none;
+
+    .barrinha {
+        width: 100%;
+        height: 10%;
+        display: flex;
+        border-bottom: 2px solid #F0F6F5;
+
+        .logoWW {
+            margin-left: 4%;
+            display: flex;
+            transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+            align-items: center;
+
+            a {
+                display: flex;
+                text-decoration: none;
+                align-items: center;
+            }
+
+            img {
+                width: 50px;
+                height: auto;
+
+            }
+
+            li {
+                font-size: 20px;
+                color: #F0F6F5;
+            }
+        }
+    }
+
+    .links {
+        width: 100%;
+        height: 30%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .opcoes {
+            width: 50%;
+            height: 10%;
+            /* margin-left: 5%; */
+            display: flex;
+            /* flex-direction: column; */
+            flex-wrap: wrap;
+            justify-content: space-around;
+
+                
+                a {
+                    color: #F0F6F5;
+                    list-style: none;
+                    text-decoration: none;
+
+                }
+        }
+    }
+
+    .redes {
+        width: 100%;
+        height: 10%;
+        color: #F0F6F5;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .container {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            width: 40%;
+            height: 100%;
+
+
+            p {
+                font-weight: bold;
+
+            }
+
+            img {
+                width: 25px;
+                height: auto;
+                cursor: pointer;
+            }
+        }
+    }
+
+    .texto {
+        width: 100%;
+        height: 40%;
+
+        p {
+            height: 100%;
+            margin: 0;
+            padding: 2% 5% 0 5%;
+            height: 70%;
+            color: #F0F6F5;
+        }
+    }
+
+    .endereco {
+        width: 100%;
+        height: 10%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .rua {
+            margin: 0;
+            color: #F0F6F5;
+            margin-left: 5%;
+
+        }
+
+        .copy {
+            color: #F0F6F5;
+            margin: 0;
+            margin-right: 5%;
+        }
+    }
+}
+
+.cookie {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(90deg, #0A8CBF, #5CCFE6);
+    color: #fff;
+    text-align: center;
+    padding: 15px;
+    font-size: 16px;
+    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+
+    p {
+        margin: 0;
+
+        a {
+            color: #fff;
+        }
+    }
+
+    button {
+        margin-top: 10px;
+        border: none;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: bold;
+        background-color: #28a745;
+        color: #fff;
+        padding: 10px 20px;
+        border-radius: 50px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        transition: all 0.3s ease;
+
+
+
+        &:hover {
+            background-color: #218838;
+            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
+        }
+    }
 }
