--- a/site/css/dashboard.css
+++ b/site/css/dashboard.css
@@ -94,6 +94,16 @@
           margin-left: 5%;
         }
       }
+
+      /* select {
+        margin-left: 10px;
+        background-color: #f0f6f5;
+        width: 140px;
+        height: 30px;
+        border-radius: 10px;
+        border: 0;
+        
+      } */
     }
   }
 }
