--- a/site/css/secoes.css
+++ b/site/css/secoes.css
@@ -214,15 +214,66 @@ header {
     height: calc(100vh - 80px);
     width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    /* flex-direction: column; */
+    /* align-items: center; */
+    /* justify-content: center; */
     background-color: #F0F6F5;
     padding-top: 80px;
 
-    .error {
+    /* .esquerda {
+        background-color: red;
+        width: 100%;
+        height: 150%;
+    } */
+    .direita {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        /* align-items: center; */
+        /* justify-content: center; */
+
+        .logo {
+            width: 40%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+                width: 85vh;
+                height: 80vh;
+            }
+        }
+
+        .texto {
+            width: 60%;
+            height: 100%;
+            color: #0A8CBF;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-self: center;
+
+            h1 {
+                text-align: center;
+                font-size: 6vh;
+
+            }
+
+            p {
+                width: 80%;
+                margin-top: 5px;
+                /* font-size: 1.3em; */
+                font-size: 3vh;
+
+            }
+
+        }
+    }
+
+    /* .error {
         width: 500px;
         height: auto;
-    }
+    } */
 
 }
