--- a/site/css/estiloCalculadora.css
+++ b/site/css/estiloCalculadora.css
@@ -1,121 +1,199 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Rubik', sans-serif;
+  scroll-padding-top: 80px;
+}
+
+.main-content {
+  padding-top: 80px;
+}
+
+* {
+  scroll-behavior: smooth;
+}
+
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    border-bottom: 2px solid black;
-    background-color: #F0F6F5;
-    width: -webkit-fill-available;
-    z-index: 100;
-}
-
-header h2 {
-    font-size: 40px;
-    font-weight: bold;
-    color: #0A8CBF;
-    margin: 0px;
-}
-
-header menu {
-    display: flex;
-    list-style: none;
-}
-
-header menu li {
-    margin-left: 30px;
-    font-size: 27px;
-    font-weight: bold;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #0A8CBF;
-}
-
-header li:hover {
-  scale: 1.1;
-}
-
-body {
-  font-family: "Rubik", sans-serif;
-  background-color: #f4f4f4;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  top: 0;
+  justify-content: space-around;
   align-items: center;
+  border-bottom: 3px solid #0A8CBF;
+  position: fixed;
+  background-color: #F0F6F5;
+  width: -webkit-fill-available;
+  height: 80px;
+  z-index: 1000;
+  list-style: none;
+
+  a {
+    display: flex;
+    text-decoration: none;
+    align-items: center;
+  }
+
+  .logoWW {
+    display: flex;
+    transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+    align-items: center;
+
+    img {
+      width: 70px;
+      height: auto;
+
+    }
+
+    li {
+      font-size: 30px;
+      color: #0A8CBF;
+    }
+
+  }
+
+
+  .opcoes {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    width: 700px;
+
+
+    li {
+      font-size: 20px;
+      color: black;
+      text-decoration: none;
+      transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+      &:hover {
+        transform: scale(1.05);
+        color: #0A8CBF;
+      }
+
+      a {
+        color: black;
+        text-decoration: none;
+        transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
+
+        &:hover {
+          transform: scale(1.03);
+          color: #0A8CBF;
+        }
+      }
+    }
+  }
+
+  .entrar {
+    display: flex;
+    justify-content: flex-end;
+    height: 100%;
+    width: 100px;
+    align-items: center;
+
+    img {
+      width: 50px;
+      height: 50px;
+      transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+    }
+
+    li {
+      font-size: 20px;
+      color: black;
+      text-decoration: none;
+      transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+      &:hover {
+        transform: scale(1.05);
+        color: #0A8CBF;
+      }
+
+      a {
+        color: black;
+        text-decoration: none;
+        transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
+
+        &:hover {
+          transform: scale(1.03);
+          color: #0A8CBF;
+        }
+      }
+    }
+  }
 }
 
-.lugar{
-  justify-content: center;
+
+.lugar {
+  width: 100%;
+  padding-top: 77px;
+  height: calc(100vh - 80px);
+  display: flex;
   align-items: center;
-}
+  justify-content: center;
 
-.calculadora {
-  background-color: #fff;
-  padding: 30px;
-  border-radius: 15px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  max-width: 800px;
-  width: 100%;
-  margin-top: 20px;
-}
+  .calculadora {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 800px;
 
-h1 {
-  color: #2c3e50;
-  font-size: 3em;
-}
+    h1 {
+      color: #0A8CBF;
+      font-size: 3em;
+    }
 
-.texto {
-  text-align: left;
-  color: #34495e;
-  margin-bottom: 20px;
-  font-size: 1.1em;
-}
+    p {
+      text-align: center;
+      color: #34495e;
+      margin-bottom: 20px;
+      font-size: 1.1em;
+    }
 
-.input-group {
-  margin-bottom: 20px;
-}
+    .input-group {
+      margin-bottom: 20px;
 
-label {
-  display: block;
-  margin-bottom: 5px;
-  color: #34495e;
-  font-weight: bold;
-}
+      label {
+        display: block;
+        margin-bottom: 5px;
+        color: #0A8CBF;
+        font-weight: bold;
+      }
 
-input {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  margin-bottom: 10px;
-  box-sizing: border-box;
-}
+      input {
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        margin-bottom: 10px;
+        box-sizing: border-box;
+      }
+    }
 
-button {
-  background-color: #0A8CBF;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1em;
-  transition: background-color 0.3s ease;
-}
 
-button:hover {
-  background-color: #0ea2dd;
-}
+    button {
+      background-color: #0A8CBF;
+      color: #fff;
+      padding: 15px 40px;
+      border: none;
+      border-radius: 15px;
+      cursor: pointer;
+      font-size: 1.2em;
+      transition: background-color 0.3s ease;
 
-#div_mensagem {
-  margin-top: 20px;
-  font-size: 1.2em;
-  color: green;
+      &:hover {
+        background-color: #0ea2dd;
+      }
+    }
+
+    #div_mensagem {
+      margin-top: 20px;
+      font-size: 1.2em;
+      color: green;
+    }
+
+  }
 }
